changed to Docker format

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
+# This file lists all individuals having contributed content to the repository.
 # The Simple_Shell Team
 
-* [Kiren Srinivasan](//github.com/srinitude) - Developer
-* [Felicia Hsieh](//github.com/feliciahsieh) - Developer
+Felicia Hsieh <felicia.hsieh@holbertonschool.com>
+Kiren Srinivasan <srinitude@gmail.com>
