--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 
 Felicia Hsieh <felicia.hsieh@holbertonschool.com>
 Kiren Srinivasan <srinitude@gmail.com>
+Larry Madeo <larry.madeo@holbertonschool.com>
