--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@
 Felicia Hsieh <felicia.hsieh@holbertonschool.com>
 Kiren Srinivasan <srinitude@gmail.com>
 Larry Madeo <larry.madeo@holbertonschool.com>
+John P. Cottrell <johnpcottrell@gmail.com>
