add Alexa Orrico to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Felicia Hsieh <felicia.hsieh@holbertonschool.com>
 Kiren Srinivasan <srinitude@gmail.com>
 Larry Madeo <larry.madeo@holbertonschool.com>
 John P. Cottrell <johnpcottrell@gmail.com>
+Alexa Orrico <alexaorrico@gmail.com>
