Adds Andrew to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Kiren Srinivasan <srinitude@gmail.com>
 Larry Madeo <larry.madeo@holbertonschool.com>
 John P. Cottrell <johnpcottrell@gmail.com>
 Alexa Orrico <alexaorrico@gmail.com>
+Andrew Birnberg <andrew.birnberg@gmail.com>
