--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Larry Madeo <larry.madeo@holbertonschool.com>
 John P. Cottrell <johnpcottrell@gmail.com>
 Alexa Orrico <alexaorrico@gmail.com>
 Andrew Birnberg <andrew.birnberg@gmail.com>
+Anoop Macharla <noop2016@gmail.com>
